[gd_scene load_steps=33 format=2]

[ext_resource path="res://enemy/sprites_enemy3/state2.png" type="Texture" id=1]
[ext_resource path="res://enemy/sprites_enemy3/state4.png" type="Texture" id=2]
[ext_resource path="res://others/effects/fire-3.png" type="Texture" id=3]
[ext_resource path="res://others/effects/fire-1.png" type="Texture" id=4]
[ext_resource path="res://others/effects/fire-5.png" type="Texture" id=5]
[ext_resource path="res://others/effects/fire-7.png" type="Texture" id=6]
[ext_resource path="res://others/effects/fire-2.png" type="Texture" id=7]
[ext_resource path="res://others/effects/fire-4.png" type="Texture" id=8]
[ext_resource path="res://enemy/sprites_enemy3/state3.png" type="Texture" id=9]
[ext_resource path="res://others/lifebar/Lifebar.tscn" type="PackedScene" id=10]
[ext_resource path="res://others/explosion/ex_7.png" type="Texture" id=11]
[ext_resource path="res://others/explosion/ex_2.png" type="Texture" id=12]
[ext_resource path="res://others/explosion/ex_4.png" type="Texture" id=13]
[ext_resource path="res://others/explosion/ex_5.png" type="Texture" id=14]
[ext_resource path="res://others/explosion/ex_3.png" type="Texture" id=15]
[ext_resource path="res://others/explosion/ex_6.png" type="Texture" id=16]
[ext_resource path="res://others/explosion/ex_8.png" type="Texture" id=17]
[ext_resource path="res://others/explosion/ex_1.png" type="Texture" id=18]
[ext_resource path="res://enemy/sprites_enemy3/state1.png" type="Texture" id=19]
[ext_resource path="res://others/effects/fire-6.png" type="Texture" id=20]
[ext_resource path="res://enemy/sprites_enemy3/FlyerEnemy.gd" type="Script" id=21]

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = SubResource( 11 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 1 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 109 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 37.9076, 177.717 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fire:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Enemy/AnimatedSprite:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Enemy/Fire:material:shader_param/flash_modifier")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "flash"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy/AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enemy/Fire:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="FlyerEnemy" type="Node2D" groups=["enemy"]]
script = ExtResource( 21 )

[node name="Enemy" type="KinematicBody2D" parent="." groups=["enemy"]]

[node name="Fire" type="AnimatedSprite" parent="Enemy"]
material = SubResource( 12 )
position = Vector2( -1, 130 )
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 6 )
frame = 6
playing = true
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy"]
material = SubResource( 10 )
position = Vector2( -1, -5 )
scale = Vector2( 0.613333, 0.613334 )
frames = SubResource( 5 )
animation = "down"
frame = 1
playing = true

[node name="Explosion" type="Node2D" parent="Enemy"]
visible = false
position = Vector2( -23, -78 )
scale = Vector2( 0.227539, 0.227539 )

[node name="1" type="AnimatedSprite" parent="Enemy/Explosion"]
modulate = Color( 0.607843, 1, 0, 1 )
position = Vector2( -17.5794, 681.202 )
frames = SubResource( 14 )

[node name="2" type="AnimatedSprite" parent="Enemy/Explosion"]
modulate = Color( 0.607843, 1, 0, 1 )
position = Vector2( 13.1845, 57.1331 )
frames = SubResource( 14 )

[node name="3" type="AnimatedSprite" parent="Enemy/Explosion"]
modulate = Color( 0.607843, 1, 0, 1 )
position = Vector2( 241.717, 184.584 )
frames = SubResource( 14 )

[node name="4" type="AnimatedSprite" parent="Enemy/Explosion"]
modulate = Color( 0.607843, 1, 0, 1 )
position = Vector2( -87.897, 351.588 )
frames = SubResource( 14 )

[node name="5" type="AnimatedSprite" parent="Enemy/Explosion"]
modulate = Color( 0.607843, 1, 0, 1 )
position = Vector2( 210.953, 443.88 )
frames = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( -1, 6 )
shape = SubResource( 4 )

[node name="LeftDamageArea" type="Area2D" parent="Enemy" groups=["hitbox"]]
position = Vector2( -1, 53 )
scale = Vector2( 0.613333, 0.613334 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/LeftDamageArea"]
position = Vector2( -37.9076, -76.6304 )
shape = SubResource( 7 )

[node name="RightDamageArea" type="Area2D" parent="Enemy" groups=["hitbox"]]
position = Vector2( -1, 53 )
scale = Vector2( 0.613333, 0.613334 )
collision_layer = 16
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/RightDamageArea"]
position = Vector2( 37.5, -74.9999 )
shape = SubResource( 7 )

[node name="Lifebar" parent="Enemy" instance=ExtResource( 10 )]
margin_left = -80.0
margin_top = -148.0
margin_right = 467.0
margin_bottom = -84.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
root_node = NodePath("../..")
anims/RESET = SubResource( 13 )
anims/flash = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[connection signal="area_entered" from="Enemy/LeftDamageArea" to="." method="_on_LeftDamageArea_area_entered"]
[connection signal="area_entered" from="Enemy/RightDamageArea" to="." method="_on_RightDamageArea_area_entered"]
